--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
     "name": "indent-model",
-    "version": "2.0.2",
+    "version": "2.0.4",
     "description": "JavaScript decide your own indentation model and tabify string",
     "main": "index.js",
-    "scripts": {},
     "repository": {
         "type": "git",
         "url": "git+https://github.com/BerendKemper/indent-model.git"
@@ -11,7 +10,8 @@
     "keywords": [],
     "author": {
         "name": "Berend Kemper",
-        "email": "berend_kemper@hotmail.com"
+        "email": "berend_kemper@hotmail.com",
+        "npmjs": "https://www.npmjs.com/~burndkemper"
     },
     "license": "MIT",
     "bugs": {
